tests/NormalTests/paczka1/fuzzy1/45733813.err
Error in line 3: SBYBfIIn S252 68,4
Error in line 7: UsMm3Pw S232 86,0
Error in line 8: XtF5o08GOyz S252 50,6
Error in line 11: GCM9T1Ii S232 43,7
Error in line 27: UsMm3Pw A27 62,2
